add java 8 date/time support
